--- a/src/LoginForm.form
+++ b/src/LoginForm.form
@@ -51,12 +51,12 @@
                   <grid row="0" column="2" row-span="2" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
               </hspacer>
-              <component id="8ec2e" class="javax.swing.JButton" binding="wsteczButton" default-binding="true">
+              <component id="8ec2e" class="javax.swing.JButton" binding="wyjscieButton">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Wstecz"/>
+                  <text value="Wyjście"/>
                 </properties>
               </component>
             </children>
